# virgo-plus

./: CMakeLists.txt  run.sh
data/: SHA256_64.pws  test_128_fail.pws  test_256_pass.pws  test_360_pass.pws  test_512_pass.pws  virgo_circuit.pws
lib/virgo/: CMakeLists.txt  polyCommit.hpp
lib/virgo/include/: HE_word.hpp  RS_polynomial.h  baseFieldElement.hpp  circuit.h  config_pc.hpp  constants.h  fft_circuit_GKR.h  fieldElement.hpp  fri.h  inputCircuit.hpp  merkle_tree.h  my_hhash.h  poly_commit.h  polynomial.h  prover.h  timer.hpp  typedef.hpp  utils.hpp  verifier.h  vpd_prover.h  vpd_verifier.h
lib/virgo/src/: CMakeLists.txt  HE_word.cpp  RS_polynomial.cpp  baseFieldElement.cpp  circuit.cpp  constants.h  fft_circuit_GKR.cpp  fieldElement.cpp  fieldElement.hpp  fri.cpp  merkle_tree.cpp  poly_commit.cpp  poly_commit.h  polynomial.cpp  prover.cpp  utils.cpp  verifier.cpp  vpd_prover.cpp  vpd_verifier.cpp
script/: run.sh
src/: CMakeLists.txt  circuit.cpp  circuit.h  config_pc.hpp  main.cpp  prover.cpp  prover.h  verifier.cpp  verifier.h
